--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ body {
 }
 
 #woodBox {
-    width: 800px;
-    height: 800px;
+    width: 600px;
+    height: 600px;
     background-color: sandybrown;
     opacity: 0.5;
     animation: woodMove 5s infinite;
@@ -71,13 +71,13 @@ body {
 }
 
 .circle {
-    width: 500px;
-    height: 500px;
+    width: 40vw;
+    height: 40vw;
     border-radius: 50%;
     background-color: whitesmoke;
     position: absolute;
-    top: -250px;
-    left: -250px;
+    top: -20vw;
+    left: -20vw;
     z-index: -1;
     animation: circleMove 10s infinite;
 }
