--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ body {
 }
 
 #woodBox {
-    width: 600px;
-    height: 600px;
+    width: 60vw;
+    height: 60vw;
     background-color: sandybrown;
     opacity: 0.5;
     animation: woodMove 5s infinite;
