--- a/style.css
+++ b/style.css
@@ -40,6 +40,16 @@ body {
     animation: dropMove 5s infinite;
 }
 
+.rain {
+    width: 50px;
+    height: 100%;
+    background-color: #222222;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    animation: rainMove 24s infinite;
+}
+
 .secoundFruit {
     transform: skew(40deg);
     transition-delay: 500ms;
@@ -81,6 +91,8 @@ body {
     z-index: -1;
     animation: circleMove 10s infinite;
 }
+
+
 
 @keyframes lemonMove {
     0%   {height: 0%;
@@ -199,5 +211,28 @@ body {
     }
     100% {
         transform: scale(0);
+    }
+}
+
+@keyframes rainMove{
+    0% {
+        height: 0;
+        top: 0;
+    }
+    70% {
+        height: 0;
+        top: 0;
+    }
+    85% {
+        height: 100%;
+        top: 90%;
+    }
+    90% {
+        height: 100%;
+        top: 90%;
+    }
+    100% {
+        height: 0;
+        top: 0;
     }
 }
