--- a/style.css
+++ b/style.css
@@ -291,3 +291,36 @@ body {
         top: 0;
     }
 }
+
+/* explosion container */
+
+.explosion {
+  position: absolute; /* required if positioned on click else 'relative' */
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* make it clickable trhough */
+}
+  /* particle styling */
+  .particle {
+    position: absolute; /* required  */
+    width: 30px;
+    height: 30px;
+    opacity: 0.6;
+    border-radius: 50%;
+    animation: pop 960ms reverse forwards; /* required */
+  }
+
+/* animation for particle fly away from the cursor */
+@keyframes pop {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0.6;
+  }  
+  100% {
+    top: 50%;
+    left: 50%;
+    opacity: 0.6;
+  }
+}
