--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
     border-radius: 75px;
     top: 50%;
     left: 50%;
+    z-index: 98;
 }
 
 .woodStick {
@@ -77,7 +78,7 @@ body {
     position: fixed;
     top: 0;
     left: 40vw;
-    z-index: 99;
+    z-index: 200;
 }
 
 .startBtn img, #header img {
@@ -295,9 +296,10 @@ body {
 /* explosion container */
 
 .explosion {
-  position: absolute; /* required if positioned on click else 'relative' */
+  position: fixed; /* required if positioned on click else 'relative' */
   width: 100%;
   height: 100%;
+  z-index: -999;
   pointer-events: none; /* make it clickable trhough */
 }
   /* particle styling */
@@ -306,6 +308,7 @@ body {
     width: 30px;
     height: 30px;
     opacity: 0.6;
+    z-index: 300;
     border-radius: 50%;
     animation: pop 960ms reverse forwards; /* required */
   }
