--- a/crowdWalking/walking.css
+++ b/crowdWalking/walking.css
@@ -9,6 +9,7 @@ html, body {
   #topRow, #secondRow, #thirdRow, #fourthRow, #fifthRow {
     width: 100%;
     position: relative;
+    overflow: visible;
   }
   #topRow {
     height: 20vh;
@@ -36,18 +37,60 @@ html, body {
     top: 55vh;
   }
 
+  #topRow .walkers {
+    width: 20vh;
+  }
+  #secondRow .walkers {
+    width: 25vh;
+  }
+  #thirdRow .walkers {
+    width: 35vh;
+  }
+  #fourthRow .walkers {
+    width: 50vh;
+  }
+  #fifthRow .walkers {
+    width: 66vh;
+  }
   .walkers {
-    width: 100%;
     height: 100%;
   }
 
   .fromRight {
     position: absolute;
-    right: -70vw;
+  }
+  #topRow .fromRight {
+    right: -20vw;
+  }
+  #secondRow .fromRight {
+    right: -25vh;
+  }
+  #thirdRow .fromRight {
+    right: -35vh;
+  }
+  #fourthRow .fromRight {
+    right: -50vh;
+  }
+  #fifthRow .fromRight {
+    right: -66vh;
   }
 
   .fromLeft {
     position: absolute;
-    left: -70vw;
     top: 30px;
-}
+  }
+  #topRow .fromLeft {
+    left: -20vw;
+  }
+  #secondRow .fromLeft {
+    left: -25vh;
+  }
+  #thirdRow .fromLeft {
+    left: -35vh;
+  }
+  #fourthRow .fromLeft {
+    left: -50vh;
+  }
+  #fifthRow .fromLeft {
+    left: -66vh;
+  }
