--- a/crowdWalking/walking.css
+++ b/crowdWalking/walking.css
@@ -128,3 +128,84 @@ html, body {
       left: -80vh;
     }
   }
+
+  /** spinner **/
+	.loadingSpinner {
+		position: relative;
+		width: 80px;
+		height: 80px;
+		margin: 40vh auto;
+	}
+	.loadingSpinner div {
+		position: absolute;
+		width: 10px;
+		height: 10px;
+		border-radius: 50%;
+		background: #222;
+		animation: loadingSpinner 1.2s linear infinite;
+	}
+	.loadingSpinner div:nth-child(1) {
+		top: 8px;
+		left: 8px;
+		animation-delay: 0s;
+	}
+	.loadingSpinner div:nth-child(2) {
+		background-color: #DA2C5E;
+		top: 8px;
+		left: 32px;
+		animation-delay: -0.4s;
+	}
+	.loadingSpinner div:nth-child(3) {
+		top: 8px;
+		left: 56px;
+		animation-delay: -0.8s;
+	}
+	.loadingSpinner div:nth-child(4) {
+		background-color: #DA2C5E;
+		top: 32px;
+		left: 8px;
+		animation-delay: -0.4s;
+	}
+	.loadingSpinner div:nth-child(5) {
+		top: 32px;
+		left: 32px;
+		animation-delay: -0.8s;
+	}
+	.loadingSpinner div:nth-child(6) {
+		background-color: #DA2C5E;
+		top: 32px;
+		left: 56px;
+		animation-delay: -1.2s;
+	}
+	.loadingSpinner div:nth-child(7) {
+		top: 56px;
+		left: 8px;
+		animation-delay: -0.8s;
+	}
+	.loadingSpinner div:nth-child(8) {
+		background-color: #DA2C5E;
+		top: 56px;
+		left: 32px;
+		animation-delay: -1.2s;
+	}
+	.loadingSpinner div:nth-child(9) {
+		top: 56px;
+		left: 56px;
+		animation-delay: -1.6s;
+	}
+	@keyframes loadingSpinner {
+		0%, 100% { opacity: 1;}
+		50% { pacity: 0.5;}
+	}
+
+/** modal **/
+
+	#modalBG {
+		position: fixed;
+		background: rgba(224, 224, 216, 0.9);
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100vh;
+		z-index: 9999;
+	}
