--- a/crowdWalking/walking.css
+++ b/crowdWalking/walking.css
@@ -135,6 +135,10 @@ html, body {
 		width: 80px;
 		height: 80px;
 		margin: 40vh auto;
+  }
+  @keyframes loadingSpinnerAnimation {
+		0%, 100% { opacity: 1;}
+		50% { opacity: 0.5;}
 	}
 	.loadingSpinner div {
 		position: absolute;
@@ -142,7 +146,7 @@ html, body {
 		height: 10px;
 		border-radius: 50%;
 		background: #222;
-		animation: loadingSpinner 1.2s linear infinite;
+		animation: loadingSpinnerAnimation 1.2s linear infinite;
 	}
 	.loadingSpinner div:nth-child(1) {
 		top: 8px;
@@ -192,10 +196,6 @@ html, body {
 		top: 56px;
 		left: 56px;
 		animation-delay: -1.6s;
-	}
-	@keyframes loadingSpinner {
-		0%, 100% { opacity: 1;}
-		50% { pacity: 0.5;}
 	}
 
 /** modal **/
