--- a/soothingMode/soothing.css
+++ b/soothingMode/soothing.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,800;1,400;1,800&family=Playfair+Display:ital,wght@0,400;1,700&display=swap');
 
-html, body {
+html, body, iframe {
     width: 100%;
     height: 100%;
     margin: 0;
