--- a/strangersWalkers/walking.css
+++ b/strangersWalkers/walking.css
@@ -60,7 +60,7 @@ a:-webkit-any-link {
 }
 
   #topPanel, #topPanelContent{
-    height: 80px;
+    height: 60px;
     width: 100%;
     position: fixed;
     top: -100px;
@@ -68,17 +68,25 @@ a:-webkit-any-link {
     align-items: center;
     justify-content: center;
     transition-duration: 300ms;
+    z-index: 900;
+
   }
 
   #topPanelContent {
-    z-index: 900;
+    background: rgb(44, 32, 32, 0.5);
   }
-  #topPanel {
+  #topPanelContent a {
+    z-index: 999;
+  }
+  /* #topPanel {
     z-index: 0;
+  } */
+  #issueHDiv {
+    display: none;
   }
 
   .infoBtn {
-    height: 50px;
+    height: 49px;
     width: fit-content;
     margin: 0 20px;
     /* background-color: rgb(224, 224, 216); */
@@ -86,10 +94,12 @@ a:-webkit-any-link {
     display: flex;
     color: rgb(224, 224, 216);
     cursor: pointer;
+    font-size: 0.9em;
   }
   .infoBtn img {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
+    margin-top: 3px;
   }
   .infoBtn:hover {
     opacity: 0.5;
@@ -131,14 +141,15 @@ a:-webkit-any-link {
     width: 700px;
     max-width: 100%;
   }
-  #issueH1 {
+  .issueH1 {
     font-family: 'Playfair Display', serif;
     font-size: 24px;
     margin: 0 auto 10px auto;
     width: 700px;
     max-width: 80%;
   }
-  #issueP {
+
+  .issueP {
     width: 700px;
     margin: 0 auto;
     max-width: 80%;
@@ -165,9 +176,12 @@ a:-webkit-any-link {
 
   @media only screen and (max-width: 800px){
     #topPanel, #topPanelContent{
-      height: 150px;
+      height: fit-content;
       display: block;
-      top: -150px;
+      top: -100%;
+    }
+    #topPanelContent {
+      background: rgb(44, 32, 32, 0.9);
     }
     #topPanel {
       z-index: 750;
@@ -176,15 +190,22 @@ a:-webkit-any-link {
       width: 100%;
       margin: 0;
       padding-left: 10px;
-      border-bottom: rgb(224, 224, 216) 1px solid;
+      border-bottom: rgb(102, 102, 102) 1px solid;
     }
-    #voicesBtn {
+    #shareBtn {
       border-bottom: none;
     }
+    #issueHDiv {
+      display: block;
+      padding: 10px 0;
+      text-align: center;
+      height: min-content;
+    }
+
     #bottomPanel {
       display: block;
-      height: calc(100% - 150px);
-      bottom: calc(-(100% - 150px));
+      height: 50px;
+      bottom: -150px;
       opacity: 0;
     }
     #prevIssue, #nextIssue {
@@ -195,18 +216,23 @@ a:-webkit-any-link {
       z-index: 800;
   }
   #thisIssue {
-    width: 700px;
+    display: none;
+    /* width: 700px;
     max-width: 80%;
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%); */
   }
-  #issueH1 {
-    margin: 100px auto 10px auto;
-    color: #343434;
+  .issueH1 {
+    margin: 10px auto;
+    color: rgb(224, 224, 216);
+    max-width: 90%;
+    font-size: 20px;
   }
-  #issueP {
-    color: #343434;
+  .issueP {
+    color: rgb(224, 224, 216);
+    margin: 10px auto;
+    max-width: 90%;
   }
 }
 @media only screen and (max-width: 400px) {
@@ -299,4 +325,18 @@ a:-webkit-any-link {
 		width: 100%;
 		height: 100vh;
 		z-index: 9999;
-	}  */
+  }  */
+  
+  #copied {
+    position: fixed;
+    width: 200px;
+    height: 20px;
+    padding: 20px;
+    top: 20px;
+    right: -320px;
+    background: rgb(255, 53, 98);
+    color: rgb(224, 224, 216);
+    z-index: 1000;
+    font-weight: 700;
+    transition-duration: 300ms;
+  }
