--- a/strangersWalkers/iOS/walking-iOS.css
+++ b/strangersWalkers/iOS/walking-iOS.css
@@ -6,7 +6,6 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 0;
-    padding: 0;
     overflow: hidden;
     font-family: 'Montserrat', sans-serif;
   }
@@ -16,10 +15,11 @@ a:-webkit-any-link {
     text-decoration: none;
 }
 
-  canvas#demoCanvas {
-    z-index: 700;
+  canvas {
+    z-index: 100;
     position: fixed;
-    top: 20%;
+    top: 0;
+    pointer-events: none;
   }
 
   #floor {
@@ -53,7 +53,7 @@ a:-webkit-any-link {
     #GroundImg {
       transform: translate(-50%, 0);
       top: unset;
-      bottom: 60px;
+      bottom: 30px;
     }
   }
 }
@@ -68,6 +68,7 @@ a:-webkit-any-link {
     justify-content: center;
     transition-duration: 300ms;
     z-index: 900;
+
   }
 
   #topPanelContent {
