--- a/strangersWalkers/iOS/walking-iOS.css
+++ b/strangersWalkers/iOS/walking-iOS.css
@@ -20,9 +20,24 @@ a:-webkit-any-link {
     z-index: 100;
     position: fixed;
     top: 0;
-    pointer-events: none;
+    /* pointer-events: none; */
   }
 
+  #panelBtn {
+    /* width: 50px;
+    height: 50px; */
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    /* top: 20px;
+    left: 20px; */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* background-color: #222222; */
+    z-index: 200;
+  }
   #floor {
     z-index: 0;
     width: 100%;
@@ -338,4 +353,11 @@ a:-webkit-any-link {
     z-index: 1000;
     font-weight: 700;
     transition-duration: 300ms;
+  }
+
+  @media only screen and (max-width: 800px) {
+    #copied {
+      top: unset;
+      bottom: 20px;
+    }
   }
